fixing-gaps

--- a/style.css
+++ b/style.css
@@ -584,7 +584,8 @@
     left: -100%;
     top: 70px;
     z-index: 2;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
     gap: 0;
     flex-direction: column;
     background-image: linear-gradient(to bottom right, #305170, #6DFC6B);
